ManifiestosEGI/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ignaciosa/back:104adad8b84ac45e9cdfa7ef91a2cda961107bda
          ports:
            - containerPort: 5000
