ManifiestosEGI/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagina-web-service
spec:
  selector:
    app: pagina-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
